# astc-encoder-new

./: CMakeLists.txt  Dockerfile
Docs/: Building.md
Source/: add.cpp  add.h  astcenc.h  astcenc_compress_image.cpp  astcenc_dependents.cpp  astcenccli_internal.h  astcenccli_toplevel.cpp  cmake_core.cmake  wuffs-v0.3.c
Source/CompressTest/: CMakeLists.txt  test_compress.cpp  test_compress_big.cpp
Source/UnitTest/: cmake_core.cmake
